Fixes homepage bg image cover (not covering), tweaks parallax for hero content

--- a/app/assets/stylesheets/songnotes/homepage.css.scss
+++ b/app/assets/stylesheets/songnotes/homepage.css.scss
@@ -1,4 +1,10 @@
-.home_intro                   { position: relative; background: url(/assets/background_livingroom_2.jpg) top center no-repeat; height: 670px; }
+.home_intro                   { position: relative; 
+                                background: url(/assets/background_livingroom_2.jpg) top center no-repeat fixed;
+                                -webkit-background-size: cover;
+                                -moz-background-size: cover;
+                                -o-background-size: cover;
+                                background-size: cover; 
+                                height: 670px; }
 
 .home_intro .overlay          { background: url(/assets/background_overlay_1.png) repeat; position: fixed; top: 0; left: 0; bottom: 0; right: 0; z-index: 1; }
 
